# lua-json5

./: .gitmodules  CMakeLists.txt  build.lua  lua-json5.code-workspace  test.lua
addons/json5/: config.json
src/: json5_lua.h  lua_json5.cpp  lua_json5.h  test.cpp
